# final_project

./: .gitignore  ASSIGNMENTS.md  Cargo.toml  Dockerfile  README.md  _compose.yml  compose-pool.yml  compose.yml  import.sh  inventory.ini  nginx.conf  nginx_single.conf  playbook.yml  read_pbf.py  setup.sh
assets/tileserver/: tileserver_config.json
k6/: README.md  install_k6.sh  package-lock.json  webpack.config.js
k6/src/: get-200-status-test.ts  get-200-status.ts  get-auth-status.ts  get-echo.ts  get-tiles-test.ts  get-tiles.ts  get-turn-test.ts  get-turn.ts  post-address-test.ts  post-address.ts  post-convert.ts  post-route-test.ts  post-route.ts  post-search-test.ts
node/: warm_routecache.js  warm_tilecache.js
scripts/: export.sh  import.sh  import_nominatim.sh  import_osrm.sh  import_tiles.sh  install_docker.sh  install_rust.sh  nginx.conf  run_tileserver.sh  set_email_relay.sh  setup_martin_maplibre.sh  test.ini  test_playbook.yml
scripts/microservices_local/: Dockerfile  Dockerfile.dockerignore  compose.yml
scripts/monoservice/: compose.yml  nginx.conf
scripts/node/: package-lock.json  warm_routecache.js  (+1 more)
services/: auth-compose.yml  route-compose.yml  search-compose.yml  tiles-compose.yml
src/: config.rs  controllers.rs  db_queries.rs  http_client.rs  lib.rs  logging.rs  main.rs  parse_form.rs  routers.rs  status_response.rs
static/: benchmark.js  combine.html  convert-handler.js  dashboard.html  index.html  style.css  tileserver-config.json  tileserver_config.json
templates/: config.toml.j2  nginx.conf.j2  tileserver-nginx.conf.j2
(+35 files in other folders)
